ninapaleha9@gmail.com

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         </div>
 
         <!-- Блок с текстом и изображением -->
-        <section class="info-section">
+        <section id="support" class="info-section">
             
             <!-- Десктопная версия -->
-            <div id="support" class="info-section__container">
+            <div class="info-section__container">
                 <div class="info-section__content fade-in">
                     <div class="info-section__text">
                         Чтобы поддержать<br>
